# net

./: CLAUDE.md  Makefile  PUBLISH.md  README.md  install.sh  run_e2e_tests.sh  setup.py
.github/workflows/: e2e-tests.yml  test.yml
_archived-from-zoo/: README.md
_archived-from-zoo/dockerized/docker/: Dockerfile
_archived-from-zoo/dockerized/workflows-old/: build-binaries.yml  docker.yml
_archived-from-zoo/hanzo-bin/hanzoai/src/: main.rs
_archived-from-zoo/hanzo-libs/hanzo-consensus/src/: config.rs  engine.rs  types.rs
_archived-from-zoo/zoo-flavored/zoo-bin/zoo-node/: Cargo.toml
_archived-from-zoo/zoo-flavored/zoo-bin/zoo-node/src/: runner.rs
_archived-from-zoo/zoo-flavored/zoo-bin/zoo-node/src/llm_provider/: job_manager.rs
_archived-from-zoo/zoo-flavored/zoo-bin/zoo-node/src/llm_provider/execution/: job_execution_core.rs  job_vector_search.rs  user_message_parser.rs
_archived-from-zoo/zoo-flavored/zoo-bin/zoo-node/src/llm_provider/execution/chains/: inference_chain_router.rs  inference_chain_trait.rs
_archived-from-zoo/zoo-flavored/zoo-bin/zoo-node/src/llm_provider/providers/: gemini.rs  openai.rs
_archived-from-zoo/zoo-flavored/zoo-bin/zoo-node/src/llm_provider/providers/shared/: shared_model_logic.rs
_archived-from-zoo/zoo-flavored/zoo-bin/zoo-node/src/managers/: model_capabilities_manager.rs  tool_router.rs
_archived-from-zoo/zoo-flavored/zoo-bin/zoo-node/src/network/: mcp_manager.rs  node.rs
_archived-from-zoo/zoo-flavored/zoo-bin/zoo-node/src/network/v1_api/: api_v1_commands.rs
_archived-from-zoo/zoo-flavored/zoo-bin/zoo-node/src/network/v2_api/: api_v2_commands.rs  api_v2_commands_tools.rs  api_v2_commands_vecfs.rs
_archived-from-zoo/zoo-flavored/zoo-bin/zoo-node/src/network/zip_export_import/: zip_export_import.rs
_archived-from-zoo/zoo-flavored/zoo-bin/zoo-node/src/tools/tool_implementation/native_tools/: config_setup.rs
_archived-from-zoo/zoo-flavored/zoo-bin/zoo-node/src/utils/: environment.rs
_archived-from-zoo/zoo-flavored/zoo-bin/zoo-node/tests/it/: db_identity_tests.rs  db_inbox_tests.rs  db_job_tests.rs  db_llm_providers_tests.rs  job_manager_concurrency_tests.rs  model_capabilities_manager_tests.rs  websocket_tests.rs
_archived-from-zoo/zoo-flavored/zoo-bin/zoo-node/tests/it/utils/: db_handlers.rs  test_boilerplate.rs
_archived-from-zoo/zoo-flavored/zoo-libs/zoo-baml/: Cargo.toml
_archived-from-zoo/zoo-flavored/zoo-libs/zoo-crypto-identities/: Cargo.toml
_archived-from-zoo/zoo-flavored/zoo-libs/zoo-crypto-identities/src/: zoo_registry.rs
_archived-from-zoo/zoo-flavored/zoo-libs/zoo-embedding/: Cargo.toml  Cargo.toml.original
_archived-from-zoo/zoo-flavored/zoo-libs/zoo-embedding/src/: model_type.rs
_archived-from-zoo/zoo-flavored/zoo-libs/zoo-fs/: Cargo.toml  Cargo.toml.backup
_archived-from-zoo/zoo-flavored/zoo-libs/zoo-fs/src/: zoo_file_manager.rs  zoo_file_manager_ops.rs  zoo_fs_error.rs
_archived-from-zoo/zoo-flavored/zoo-libs/zoo-fs/src/simple_parser/: file_parser_grouping.rs
_archived-from-zoo/zoo-flavored/zoo-libs/zoo-fs/src/simple_parser/local_parsing/: docx_parsing.rs  xlsx_parsing.rs
_archived-from-zoo/zoo-flavored/zoo-libs/zoo-http-api/: Cargo.toml
_archived-from-zoo/zoo-flavored/zoo-libs/zoo-http-api/src/api_sse/: mcp_tools_service.rs
_archived-from-zoo/zoo-flavored/zoo-libs/zoo-job-queue-manager/: Cargo.toml
_archived-from-zoo/zoo-flavored/zoo-libs/zoo-job-queue-manager/src/: job_queue_manager.rs
_archived-from-zoo/zoo-flavored/zoo-libs/zoo-libp2p-relayer/: Cargo.toml
_archived-from-zoo/zoo-flavored/zoo-libs/zoo-libp2p-relayer/src/: main.rs
_archived-from-zoo/zoo-flavored/zoo-libs/zoo-mcp/: Cargo.toml
_archived-from-zoo/zoo-flavored/zoo-libs/zoo-mcp/src/: mcp_methods.rs
_archived-from-zoo/zoo-flavored/zoo-libs/zoo-message-primitives/: Cargo.toml
_archived-from-zoo/zoo-flavored/zoo-libs/zoo-message-primitives/src/zoo_message/: zoo_message_signing.rs
_archived-from-zoo/zoo-flavored/zoo-libs/zoo-non-rust-code/: Cargo.toml
_archived-from-zoo/zoo-flavored/zoo-libs/zoo-non-rust-code/src/: lib.rs
_archived-from-zoo/zoo-flavored/zoo-libs/zoo-non-rust-code/src/functions/: get_identity_data.rs  parse_docx.rs  parse_pdf.rs  parse_xlsx.rs
_archived-from-zoo/zoo-flavored/zoo-libs/zoo-non-rust-code/src/functions/ethers_wallet/: create_wallet.rs  recover_wallet.rs
_archived-from-zoo/zoo-flavored/zoo-libs/zoo-sheet/: Cargo.toml
_archived-from-zoo/zoo-flavored/zoo-libs/zoo-sqlite/: Cargo.toml
_archived-from-zoo/zoo-flavored/zoo-libs/zoo-sqlite/src/: agent_manager.rs  cron_task_manager.rs  file_system.rs  identity_manager.rs  identity_registration.rs  inbox_manager.rs  invoice_manager.rs  invoice_request_manager.rs  job_manager.rs  keys_manager.rs  lib.rs  llm_provider_manager.rs  mcp_server_manager.rs  oauth_manager.rs  preferences.rs  prompt_manager.rs  regex_pattern_manager.rs  settings_manager.rs  tool_payment_req_manager.rs  tool_playground.rs  tracing.rs  wallet_manager.rs  zoo_tool_manager.rs
_archived-from-zoo/zoo-flavored/zoo-libs/zoo-tools-primitives/: Cargo.toml
_archived-from-zoo/zoo-flavored/zoo-libs/zoo-tools-primitives/src/tools/: deno_tools.rs  error.rs  mcp_methods.rs  mcp_server_tool.rs  mod.rs  python_tools.rs
_archived-from-zoo/zoo-flavored/zoo-libs/zoo-tools-runner/: Cargo.toml
_archived-from-zoo/zoo-flavored/zoo-libs/zoo-tools-runner/src/: lib.rs
_archived-from-zoo/zoo-flavored/zoo-test-framework/: Cargo.toml
_archived-from-zoo/zoo-flavored/zoo-test-framework/src/: context.rs
_archived-from-zoo/zoo-flavored/zoo-test-macro/: Cargo.toml
examples/: chatgpt_api.sh
hanzo-consensus/src/: config.rs
hanzo-hmm/src/: compute_price.rs  hamiltonian.rs  lib.rs
hanzo-vm/: Cargo.toml
hanzo-vm/src/: precompiles.rs
scripts/: compile_grpc.sh
src/hanzo_net.egg-info/: PKG-INFO  requires.txt
src/net/: helpers.py
src/net/inference/mlx/: sharded_utils.py
src/net/inference/mlx/models/sd_models/: clip.py  unet.py  vae.py
src/net/viz/: topology_viz.py
tests/: mobile.spec.js
(+1 files in other folders)
