[package]
name = "zoo-test-framework"
version = "0.1.0"
edition = "2021"


[lib]
name = "zoo_test_framework"

[dependencies]
tokio = { workspace = true }
async-channel = { workspace = true }
anyhow = { workspace = true }
zoo-http-api = { workspace = true }
zoo-message-primitives = { workspace = true }
hanzo-embed = { workspace = true }
zoo-sqlite = { workspace = true }
zoo-node = { path = "../zoo-bin/zoo-node" }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
tempfile = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
