[package]
name = "zoo-embedding"
version = "1.1.35"
edition = "2021"
authors = [ "Zoo Foundation <dev@zoo.ngo>",]
description = "Model Context Protocol implementation"
license = "MIT"
repository = "https://github.com/zooai/node"
homepage = "https://zoo.ai"

[dependencies]
bincode = "1.3.3"
serde_json = "1.0.117"
rand = "0.8.5"
blake3 = "1.2.0"
chrono = "0.4"
thiserror = "2.0.3"
lazy_static = "1.5.0"
async-trait = "0.1.74"
keyphrases = "0.3.3"
futures = "0.3.30"
csv = "1.1.6"
utoipa = "4.2.3"
regex = "1"

[dependencies.reqwest]
version = "0.11.27"
features = [ "json", "blocking",]

[dependencies.serde]
version = "1.0.219"
features = [ "derive",]
