[[test]]
name = "zoo-fs"
path = "tests/pdf_parsing_tests.rs"
required-features = [ "static-pdf-parser",]

[package]
name = "zoo-fs"
version = "1.1.35"
edition = "2021"
authors = [ "Zoo Foundation <dev@zoo.ngo>",]
description = "Model Context Protocol implementation"
license = "MIT"
repository = "https://github.com/zooai/node"
homepage = "https://zoo.ai"

[dependencies]
bincode = "1.3.3"
serde_json = "1.0.117"
rand = "0.8.5"
blake3 = "1.2.0"
chrono = "0.4"
thiserror = "2.0.3"
reqwest = "0.11.27"
lazy_static = "1.5.0"
async-trait = "0.1.74"
keyphrases = "0.3.3"
futures = "0.3.30"
scraper = "0.19.0"
urlencoding = "2.1.0"
walkdir = "2.5.0"
csv = "1.1.6"
utoipa = "4.2.3"
regex = "1"
os_path = "0.8.0"
tempfile = "3.19"

[dev-dependencies]
tempfile = "3.19"
serial_test = "0.5"

[dependencies.zoo-message-primitives]
workspace = true

[dependencies.hanzo-embed]
workspace = true

[dependencies.zoo-sqlite]
workspace = true

[dependencies.tokio]
version = "1.36"
features = [ "rt", "rt-multi-thread", "macros", "fs", "io-util", "net", "sync", "time",]

[dependencies.comrak]
version = "0.22.0"
default-features = true

[dependencies.zoo-non-rust-code]
workspace = true

[dependencies.serde]
version = "1.0.219"
features = [ "derive",]
