[package]
name = "zoo-http-api"
version = "1.1.35"
edition = "2021"
authors = [ "Zoo Foundation <dev@zoo.ngo>",]
description = "Model Context Protocol implementation"
license = "MIT"
repository = "https://github.com/zooai/node"
homepage = "https://zoo.ai"

[dependencies]
utoipa = "4.2.3"
chrono = "0.4"
bytes = "1.10.1"
async-trait = "0.1.74"
once_cell = "1.19.0"
warp = "0.3.7"
serde_json = "1.0.117"
futures = "0.3.30"
async-channel = "1.6.1"
reqwest = "0.11.27"
tokio-stream = "0.1.10"
rand = "0.8.5"
tokio-rustls = "0.23"
rustls = "0.23.27"
rustls-pemfile = "1.0.3"
tokio-util = "0.7.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.94"

[features]
default = []
swagger-ui = [ "utoipa-swagger-ui",]

[dependencies.utoipa-swagger-ui]
version = "7.1.0"
optional = true
features = [ "vendored",]

[dependencies.x25519-dalek]
version = "2.0.1"
features = [ "static_secrets",]

[dependencies.ed25519-dalek]
version = "2.1.1"
features = [ "rand_core",]

[dependencies.zoo-message-primitives]
workspace = true

[dependencies.zoo-tools-primitives]
workspace = true

[dependencies.tokio]
version = "1.36"
features = [ "rt", "rt-multi-thread", "macros", "fs", "io-util", "net", "sync", "time",]

[dependencies.hyper]
version = "0.14.30"
features = [ "server",]

[dependencies.uuid]
version = "1.6.1"
features = [ "v4",]

[dependencies.rmcp]
workspace = true
features = [ "server", "macros",]

[dependencies.tokio-tungstenite]
version = "0.26.2"
features = [ "native-tls",]

[dependencies.serde]
version = "1.0.219"
features = [ "derive",]
