[package]
name = "zoo-job-queue-manager"
version = "1.1.35"
edition = "2021"
authors = [ "Zoo Foundation <dev@zoo.ngo>",]
description = "Model Context Protocol implementation"
license = "MIT"
repository = "https://github.com/zooai/node"
homepage = "https://zoo.ai"

[dependencies]
chrono = "0.4"
serde_json = "1.0.117"

[dev-dependencies]
tempfile = "3.19"

[dependencies.zoo-message-primitives]
workspace = true

[dependencies.zoo-sqlite]
workspace = true

[dependencies.hanzo-embed]
workspace = true

[dependencies.tokio]
version = "1.36"
features = [ "rt", "rt-multi-thread", "macros", "fs", "io-util", "net", "sync", "time",]

[dependencies.serde]
version = "1.0.219"
features = [ "derive",]
