[package]
name = "zoo-mcp"
version = "1.1.35"
edition = "2021"
description = "Methods to interact with MCP servers"
license = "MIT"
repository = "https://github.com/zooai/node"
homepage = "https://zoo.ai"
authors = [ "Zoo Foundation <dev@zoo.ngo>",]

[dependencies]
thiserror = "2.0.3"
async-trait = "0.1.74"
futures = "0.3.30"
log = "0.4.20"
serde_json = "1.0.117"
tracing = "0.1.40"
regex = "1"
once_cell = "1.21"
home = "0.5"
strip-ansi-escapes = "0.2"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"

[dependencies.serde]
version = "1.0.219"
features = [ "derive",]

[dependencies.tokio]
version = "1.36"
features = [ "rt", "rt-multi-thread", "macros", "fs", "io-util", "net", "sync", "time",]

[dependencies.rmcp]
workspace = true
features = [ "client", "transport-child-process", "transport-sse-client-reqwest", "transport-streamable-http-client-reqwest", "reqwest",]
