[package]
name = "zoo-sheet"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "Model Context Protocol implementation"
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4"] }
regex = { workspace = true }
zoo-message-primitives = { workspace = true }
async-channel = { workspace = true }

[dependencies.serde]
workspace = true
features = ["derive"]

[[test]]
name = "sheet_common_tests"
path = "tests/sheet_common_tests.rs"

[[test]]
name = "sheet_one_row_advanced_tests"
path = "tests/sheet_one_row_advanced_tests.rs"
