[package]
name = "zoo-sqlite"
version = "1.1.35"
edition = "2021"
authors = [ "Zoo Foundation <dev@zoo.ngo>",]
description = "Model Context Protocol implementation"
license = "MIT"
repository = "https://github.com/zooai/node"
homepage = "https://zoo.ai"

[dependencies]
serde_json = "1.0.117"
chrono = "0.4"
sqlite-vec = "0.1.6"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25"
keyphrases = "0.3.3"
reqwest = "0.11.27"
bincode = "1.3.3"
zerocopy = "0.8.9"
bytemuck = "1.7"
thiserror = "2.0.3"
blake3 = "1.2.0"
hex = "0.4.3"
rand = "0.8.5"
semver = "1.0"
log = "0.4.20"

[dev-dependencies]
tempfile = "3.19"
rust_decimal = "1.17.0"

[dependencies.rusqlite]
version = "0.32.1"
features = [ "bundled",]

[dependencies.tokio]
version = "1.36"
features = [ "rt", "rt-multi-thread", "macros", "fs", "io-util", "net", "sync", "time",]

[dependencies.zoo-tools-primitives]
workspace = true

[dependencies.zoo-message-primitives]
workspace = true

[dependencies.hanzo-embed]
workspace = true

[dependencies.x25519-dalek]
version = "2.0.1"
features = [ "static_secrets",]

[dependencies.ed25519-dalek]
version = "2.1.1"
features = [ "rand_core",]

[dependencies.serde]
version = "1.0.219"
features = [ "derive",]
