[package]
name = "zoo-tools-primitives"
version = "1.1.35"
edition = "2021"
authors = [ "Zoo Foundation <dev@zoo.ngo>",]
description = "Model Context Protocol implementation"
license = "MIT"
repository = "https://github.com/zooai/node"
homepage = "https://zoo.ai"

[dependencies]
serde_json = "1.0.117"
regex = "1"
reqwest = "0.11.27"
base64 = "0.22.0"
log = "0.4.20"
once_cell = "1.19"

[dependencies.tokio]
version = "1.36"
features = [ "rt", "rt-multi-thread", "macros", "fs", "io-util", "net", "sync", "time",]

[dependencies.zoo-message-primitives]
workspace = true

# Use zoo-tools-runner from workspace (wraps hanzo-tools-runner)
[dependencies.zoo-tools-runner]
workspace = true

# Also keep direct hanzo-tools-runner dependency for compatibility
[dependencies.hanzo-tools-runner]
workspace = true

# Note: NOT using hanzo_mcp - it requires rmcp 0.8 which is incompatible with Zoo's current architecture
# Zoo uses rmcp 0.8 now but has architectural changes needed to support it properly

[dependencies.serde]
version = "1.0.219"
features = [ "derive",]

[dependencies.rmcp]
workspace = true
features = [ "client", "transport-child-process", "transport-sse-client-reqwest", "transport-streamable-http-client-reqwest", "reqwest"]

# [dependencies.zoo-mcp]
# workspace = true  # Disabled - zoo-mcp uses outdated rmcp API, now using rmcp 0.8 directly
